# nexcore-nervous

./: Cargo.toml  README.md
src/: claude_code.rs  grounding.rs  lib.rs  signal_bridge.rs  synapse_bridge.rs
